--- a/index.html
+++ b/index.html
@@ -4,7 +4,95 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        xyz
+        <nav>
+            <img class= "navlogo" src="media/Screenshot 2022-05-29 130624.png">
+            <div class="links">
+                <a class="link" href="./index.html">Home</a>
+                <a class="link" href="./facilities.html">Facilities</a>
+                <a class="link" href="./co-ordinator.html">Co-Ordinators</a>
+            </div>
+        </nav>
+
+        <img class="banner_image" src="media/IMG_20220529_121946.jpg">
+        <section class="bggrad1">
+            <h2 class="heading">
+                About MSSC
+            </h2>
+            <p class="content">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc scelerisque convallis sapien, a varius urna aliquam eget. Curabitur consequat enim eget tortor porttitor porta. Praesent at ante augue. Nulla facilisi. In nec ipsum quis erat accumsan egestas ac sed tellus. Suspendisse interdum mollis lectus, nec luctus lacus faucibus at. Suspendisse a mattis ipsum. Maecenas auctor tincidunt ullamcorper. Aliquam in eros eleifend, suscipit nunc et, malesuada mi. Nunc convallis urna et sapien mattis venenatis sit amet quis quam. Praesent at odio dapibus, tincidunt lectus quis, tempus tortor. Integer laoreet quam quis sapien lobortis consequat.Ut sagittis feugiat tristique. Vestibulum consequat lacus mauris, ut eleifend leo aliquam at. Mauris mollis tellus quis ornare congue. Vivamus aliquet ante sit amet ipsum consectetur, nec aliquet est egestas. Fusce tincidunt, lacus et aliquet efficitur, est arcu eleifend ligula, nec suscipit orci eros sit amet nunc. Ut et ante vel justo convallis feugiat. Ut suscipit orci sapien, a porta nisi ornare a. Maecenas ornare metus ut orci vulputate, at vulputate dui consectetur. Integer consequat iaculis tempor. Praesent ipsum elit, scelerisque ut ultrices ut, feugiat id nibh. Morbi semper ipsum orci, a mollis mauris dictum sit amet. Nullam id faucibus nisi. Ut fringilla, dolor sit amet pellentesque vestibulum, dui orci consequat ipsum, ut finibus eros libero in quam.
+            </p>
+        </section>
+        <section class="bggrad2">
+            <h2 class="heading">
+                About Us
+            </h2>
+            <p class="content">
+                Proin posuere est non velit venenatis, id volutpat enim pulvinar. Nulla et lacus sit amet risus tincidunt euismod eu ac elit. Vivamus euismod purus nisi, sit amet tristique turpis rutrum vel. Quisque tincidunt turpis sit amet orci fermentum, ut dictum nisl dignissim. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla porta congue metus, sed congue purus rhoncus id. Mauris scelerisque ipsum justo, sed ultrices justo viverra at. Sed ut ultricies odio, sed interdum ex. Aenean sit amet enim non mauris sodales porta. Aenean mollis finibus bibendum. Quisque porttitor ipsum nibh, nec blandit sem rutrum in. Aliquam feugiat ullamcorper lacus, id porta mi elementum id. Nulla vitae laoreet tellus, at auctor quam. Nulla convallis dui non lectus tincidunt, sed scelerisque metus semper. In imperdiet, felis sit amet dignissim dictum, diam nulla suscipit mauris, ut placerat libero purus eu risus. Sed imperdiet venenatis velit. Curabitur vitae enim velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam condimentum libero quis odio cursus vestibulum. Quisque sed est eu ipsum consequat commodo sit amet eu lorem. Sed sodales leo sit amet faucibus volutpat.
+            </p>
+        </section>
+        <section class="bggrad3">
+            <h2 class="heading">
+                Objectives
+            </h2>
+            <p class="content">
+                Aliquam consequat quam mollis lorem bibendum, id condimentum nisi ullamcorper. Nunc sagittis lectus in metus dignissim accumsan. 
+                <ol class="content"> 
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                    <li>
+                        Donec molestie finibus libero, et mattis diam molestie quis. Morbi aliquet nisl velit, nec interdum orci pulvinar a.
+                    </li>
+                </ol>
+            </p>
+        </section>
+        <footer>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <h3 class="heading">
+                        Contact us
+                    </h3>
+                    <p style="text-align: center;">
+                        Phone: +91 6262174462<br>
+                        email: msscs@aec.ac.in<br>
+                        website: mssc.aec.ac.in
+                    </p>
+                </div>
+                <div class="grid-item">
+                    <h3 class="heading">
+                        Location
+                    </h3>
+                    <iframe style="padding-left: 30%;" src="http://wikimapia.org/#lat=26.142279&lon=91.658753&z=19&l=&ifr=1&m=w" width="320" height="275" frameborder="0"></iframe>
+                </div>
+              </div>
+        </footer>
         <script src="js/main.js"></script>
     </body>
 </html>
